# shadercompiler

./: .clang-format  CMakeLists.txt  buildcompiler  run
src/: CMakeLists.txt  functions.cpp  getopt.c  getopt.cpp  getopt.h  main.cpp  parser.cpp  parser.h
